Fixed banner arrow on mobile

--- a/_sass/banner.scss
+++ b/_sass/banner.scss
@@ -1,11 +1,16 @@
 .banner {
     background-color: #494949;
     background-image: url(/assets/images/site/banner-bg.jpg);
-    min-height: 100vh;
+    //min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    // display: table;
+    // height: 100%;
+    // width: 100%;
+    // vertical-align: middle;
+    min-height: 100%;
 
     @include breakpoint(large) {
         background-image: url(/assets/images/site/banner-bg-large.jpg);
