--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -3,8 +3,8 @@ html {
     box-sizing: border-box;
 }
 
-body {
-    height: 100vh;
+html, body {
+    height: 100%;
 }
 
 .wrapper {
